--- a/src/half-title.tex
+++ b/src/half-title.tex
@@ -64,6 +64,8 @@
     Translated to Japanese by \href{https://github.com/sonoisa}{Isao Sonobe}.\\
     \vspace{1.26em}
     \noindent
-    \LaTeX{} source code is available on GitHub: \href{https://github.com/hmemcpy/milewski-ctfp-pdf}{https://github.com/hmemcpy/milewski-ctfp-pdf}
+    \LaTeX{} source code is available on GitHub: \\
+    \href{https://github.com/hmemcpy/milewski-ctfp-pdf}{https://github.com/hmemcpy/milewski-ctfp-pdf}\\
+    \href{https://github.com/sonoisa/milewski-ctfp-pdf-japanese}{https://github.com/sonoisa/milewski-ctfp-pdf-japanese}
   \end{center}
 \end{small}
