Update state of progress (done 1.2)

--- a/src/content/1.1/category-the-essence-of-composition.tex
+++ b/src/content/1.1/category-the-essence-of-composition.tex
@@ -82,7 +82,7 @@ f \ensuremath{\Colon} A → B
         そして
         \[\idarrow[B] \circ f = f\]
 \end{enumerate}
-関数を扱う場合、恒等射はその引数をそのまま返す恒等関数として実装されます。この実装はすべての型に対して同じであり、これはこの関数が全称量化された多相的関数であることを意味します。C++ではテンプレートとして定義することができます:
+関数を扱う場合、恒等射はその引数をそのまま返す恒等関数として実装されます。この実装はすべての型に対して同じであり、これはこの関数が全称多相的であることを意味します。C++ではテンプレートとして定義することができます:
 
 \begin{snip}{cpp}
 template<class T> T id(T x) { return x; }
