--- a/src/content/1.8/functoriality.tex
+++ b/src/content/1.8/functoriality.tex
@@ -219,7 +219,7 @@ Haskellの\code{fmap}の実装と比較してみてください:
 
 この議論は非常に一般的です: あなたは\code{Writer}を任意の型コンストラクタに置き換えることができます。魚演算子と\code{return}をサポートする限り、\code{fmap}を定義することができます。したがって、Kleisli圏の装飾は常に関手です。 (しかし、すべての関手がKleisli圏を生み出すわけではありません。) 
 
-あなたは、私たちが定義した\code{fmap}が、\code{deriving Functor}でコンパイラが私たちのために導出してくれる\code{fmap}と同じものかどうか疑問に思うかもしれません。興味深いことに、それはそうです。これは、Haskellが多相関数を実装する方法によるものです。それは\newterm{パラメトリック多相性}と呼ばれ、いわゆる\newterm{無料の定理}の源です。そのような定理の1つは、与えられた型コンストラクタに対して恒等性を保つ\code{fmap}の実装がある場合、それは一意でなければならないというものです。
+あなたは、私たちが定義した\code{fmap}が、\code{deriving Functor}でコンパイラが私たちのために導出してくれる\code{fmap}と同じものかどうか疑問に思うかもしれません。興味深いことに、それはそうです。これは、Haskellが多相的関数を実装する方法によるものです。それは\newterm{パラメトリック多相性}と呼ばれ、いわゆる\newterm{無料の定理}の源です。そのような定理の1つは、与えられた型コンストラクタに対して恒等性を保つ\code{fmap}の実装がある場合、それは一意でなければならないというものです。
 
 \section{共変関手と反変関手}
 
