--- a/src/content/1.9/function-types.tex
+++ b/src/content/1.9/function-types.tex
@@ -313,7 +313,7 @@ newtype Void = Void Void
 
 これらはすべて興味深い例ですが、Curry-Howard同型には実用的な側面があるのでしょうか？おそらく日常のプログラミングではありません。しかし、AgdaやCoqのようなプログラミング言語はCurry-Howard同型を利用して定理を証明します。
 
-コンピューターは数学者が仕事をするのを助けるだけでなく、数学の非常に基礎を革命しています。その分野での最新の熱い研究トピックはホモトピー型理論と呼ばれ、型理論の成長です。それはBooleans、整数、積と余積、関数型などでいっぱいです。そして、疑問を払拭するかのように、この理論はCoqやAgdaで定式化されています。コンピュータは複数の方法で世界を革命しています。
+コンピュータは数学者が仕事をするのを助けるだけでなく、数学の非常に基礎を革命しています。その分野での最新の熱い研究トピックはホモトピー型理論と呼ばれ、型理論の成長です。それはBooleans、整数、積と余積、関数型などでいっぱいです。そして、疑問を払拭するかのように、この理論はCoqやAgdaで定式化されています。コンピュータは複数の方法で世界を革命しています。
 
 \section{参考文献}
 
