--- a/src/content/2.4/representable-functors.tex
+++ b/src/content/2.4/representable-functors.tex
@@ -73,7 +73,7 @@ $\alpha$の$x$におけるコンポーネントを見てみましょう。それ
 \[\alpha_x \Colon \cat{C}(a, x) \to F x\]
 この変換の自然性条件は、$x$から$y$への任意の射$f$に対して、次の図式が可換であることを告げています: 
 \[F f \circ \alpha_x = \alpha_y \circ \cat{C}(a, f)\]
-Haskellでは、自然変換を多相関数で置き換えます: 
+Haskellでは、自然変換を多相的関数で置き換えます: 
 
 \src{snippet06}
 オプショナルの\code{forall}量化子を使います。自然性条件
