--- a/src/content/3.11/kan-extensions.tex
+++ b/src/content/3.11/kan-extensions.tex
@@ -233,7 +233,7 @@ Kan拡張のエンド/余エンドの式は、Haskellに簡単に翻訳できま
 \src{snippet02}
 \code{Int} のリストが返されます。右Kan拡張はあなたの関数を使って木を生成し、それをリストに再梱包します。例えば、文字列からパース木を生成するパーサーを渡すと、その木の深さ優先探索に対応するリストが得られます。
 
-右Kan拡張は、\code{d} を恒等関手に置き換えることで、与えられた関手の左随伴を計算するために使用することができます。これにより、関手 \code{k} の左随伴が、次の型の多相関数の集合で表されます:
+右Kan拡張は、\code{d} を恒等関手に置き換えることで、与えられた関手の左随伴を計算するために使用することができます。これにより、関手 \code{k} の左随伴が、次の型の多相的関数の集合で表されます:
 
 \src{snippet03}
 例えば、\code{k} がモノイドの圏から忘却関手であると仮定します。すると、全称量化子はすべてのモノイドを渡ります。もちろん、Haskellではモノイド則を表現することはできませんが、以下は結果として得られる自由関手 (忘却関手 \code{k} は対象に対して恒等的です) のまともな近似です:
